update api with update user and update currency
